--- a/dmu1/dmu1_ml_XMM-LSS/1.11_SXDS.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/1.11_SXDS.ipynb
@@ -40,7 +40,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -1084,10 +1086,33 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "catalogue.add_column(Column(data=np.arange(len(catalogue)), name=\"sxds_intid\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for col in catalogue.colnames:\n",
+    "    if '_sxds_b' in col:\n",
+    "        catalogue.rename_column(col, col.replace('_sxds_b', '_subaru_b'))\n",
+    "    elif '_sxds_v' in col:\n",
+    "        catalogue.rename_column(col, col.replace('_sxds_v', '_subaru_v'))\n",
+    "    elif '_sxds_r' in col:\n",
+    "        catalogue.rename_column(col, col.replace('_sxds_r', '_subaru_r'))\n",
+    "    elif '_sxds_i' in col:\n",
+    "        catalogue.rename_column(col, col.replace('_sxds_i', '_subaru_ip'))\n",
+    "    elif '_sxds_z' in col:\n",
+    "        catalogue.rename_column(col, col.replace('_sxds_zp', '_subaru_zp'))"
    ]
   },
   {
