--- a/dmu1/dmu1_ml_XMM-LSS/2.4_VIRCAM_merge.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/2.4_VIRCAM_merge.ipynb
@@ -31,7 +31,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -173,7 +175,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Given the graph above, we use 0.8 arc-second radius\n",
@@ -213,7 +217,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Given the graph above, we use 0.8 arc-second radius\n",
@@ -615,15 +621,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "for col in master_catalogue.colnames:\n",
-    "    if 'vista' in col:\n",
-    "        master_catalogue[col].name  = col.replace('vista', 'vircam')"
+    "for col in catalogue.colnames:\n",
+    "    if '_vista_k' in col:\n",
+    "        catalogue.rename_column(col, col.replace('_vista_k', '_vista_ks'))"
    ]
   },
   {
