--- a/dmu1/dmu1_ml_XMM-LSS/2.7_Merging.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/2.7_Merging.ipynb
@@ -1583,11 +1583,11 @@
     "        1 * ~np.isnan(sub_catalogue['f_ukidss_h']) +\n",
     "        1 * ~np.isnan(sub_catalogue['f_ukidss_k']) +\n",
     "        # VISTA\n",
-    "        1 * ~np.isnan(sub_catalogue['f_vircam_z']) +\n",
-    "        1 * ~np.isnan(sub_catalogue['f_vircam_y']) +\n",
-    "        1 * ~np.isnan(sub_catalogue['f_vircam_j']) +\n",
-    "        1 * ~np.isnan(sub_catalogue['f_vircam_h']) +\n",
-    "        1 * ~np.isnan(sub_catalogue['f_vircam_k'])\n",
+    "        1 * ~np.isnan(sub_catalogue['f_vista_z']) +\n",
+    "        1 * ~np.isnan(sub_catalogue['f_vista_y']) +\n",
+    "        1 * ~np.isnan(sub_catalogue['f_vista_j']) +\n",
+    "        1 * ~np.isnan(sub_catalogue['f_vista_h']) +\n",
+    "        1 * ~np.isnan(sub_catalogue['f_vista_ks'])\n",
     "    )\n",
     "\n",
     "    nb_mir_flux = (\n",
