Work on masterlist overview

--- a/dmu1/Masterlist_overview.ipynb
+++ b/dmu1/Masterlist_overview.ipynb
@@ -17,10 +17,17 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/seaborn/apionly.py:6: UserWarning: As seaborn no longer sets a default style on import, the seaborn.apionly module is deprecated. It will be removed in a future version.\n",
+      "  warnings.warn(msg, UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "from astropy.table import Table, Column\n",
     "from astropy import units as u\n",
@@ -28,10 +35,30 @@
     "\n",
     "from pymoc import MOC\n",
     "\n",
-    "from herschelhelp_internal.masterli\n",
+    "from herschelhelp_internal.masterlist import find_last_ml_suffix\n",
     "\n",
     "import os\n",
-    "#import humanfriendly"
+    "import humanfriendly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'524.26 MB'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "humanfriendly.format_size(524255040.0)"
    ]
   },
   {
@@ -79,10 +106,12 @@
    "source": [
     "masterlist_summary = Table()\n",
     "masterlist_summary.add_column(Column(data = np.array(dr1)[:,0], name = 'field'))\n",
-    "masterlist_summary.add_column(Column(data =np.full(len(masterlist_summary), 0, dtype=int), name = 'suffix'))\n",
+    "masterlist_summary.add_column(Column(data =np.full(len(masterlist_summary), '', dtype=str), name = 'dr1_suffix'))\n",
+    "masterlist_summary.add_column(Column(data =np.full(len(masterlist_summary), '', dtype=str), name = 'last_suffix'))\n",
     "masterlist_summary.add_column(Column(data =np.full(len(masterlist_summary), 0, dtype=int), name = 'objects'))\n",
-    "masterlist_summary.add_column(Column(data =np.full(len(masterlist_summary), np.nan, dtype=float), name = 'area'))\n",
-    "masterlist_summary.add_column(Column(data =np.full(len(masterlist_summary), np.nan, dtype=float), name = 'file_size'))"
+    "masterlist_summary.add_column(Column(data =np.full(len(masterlist_summary), np.nan, dtype=float), name = 'area_sq_degrees'))\n",
+    "masterlist_summary.add_column(Column(data =np.full(len(masterlist_summary), 0, dtype=int), name = 'file_size_bytes'))\n",
+    "masterlist_summary.add_column(Column(data =np.full(len(masterlist_summary), '', dtype=str), name = 'file_size_readable'))"
    ]
   },
   {
@@ -120,24 +149,29 @@
     "    \n",
     "    moc = MOC(filename='../dmu2/dmu2_field_coverages/{}_MOC.fits'.format(field[0]))\n",
     "    area = round(moc.area_sq_deg)\n",
-    "    masterlist_summary['area'][masterlist_summary['field'] == field[0]] = area\n",
+    "    masterlist_summary['area_sq_degrees'][masterlist_summary['field'] == field[0]] = area\n",
     "    \n",
-    "    masterlist_summary['suffix'][masterlist_summary['field'] == field[0]] = field[1]\n",
+    "    masterlist_summary['dr1_suffix'][masterlist_summary['field'] == field[0]] = field[1]\n",
+    "    masterlist_summary['last_suffix'][masterlist_summary['field'] == field[0]] = find_last_suffix('dr1_ml_{}/data/'.format(field[0]))\n",
     "    \n",
     "    size = os.stat('dmu1_ml_{}/data/master_catalogue_{}_{}.fits'.format(field[0], \n",
     "                                                                                      field[0].lower(), \n",
     "                                                                                      field[1])).st_size\n",
-    "    \n",
-    "    \n",
-    "    latest_suffix = find_last_suffix('dr1_ml_{}/data/')\n",
+    "\n",
     "    \n",
     "    \n",
     "    #Can't install packages on Vulcain\n",
     "    #size_readable = humanfriendly.format_size(size)\n",
-    "    masterlist_summary['file_size'][masterlist_summary['field'] == field[0]] = size\n",
+    "    masterlist_summary['file_size_bytes'][masterlist_summary['field'] == field[0]] = size\n",
+    "    masterlist_summary['file_size_readable'][masterlist_summary['field'] == field[0]] = humanfriendly.format_size(size)\n",
+    "    \n",
+    "\n",
     "    \n",
     "    #TODO:\n",
     "    num_surveys = 0.\n",
+    "    \n",
+    "    #Mean depth in g\n",
+    "    mean_depth = 0.\n",
     "    \n",
     "    num_bands = 0."
    ]
@@ -223,7 +257,18 @@
     }
    ],
    "source": [
-    "print('Total number of objects in HELP: {}'.format(np.sum(masterlist_summary['Objects'])))"
+    "print('Total number of objects in HELP: {}'.format(np.sum(masterlist_summary['objects'])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "print('Total size of masterlist files: {}'.format(humanfriendly.format_size(np.sum(masterlist_summary['file_size_bytes']))))"
    ]
   },
   {
