--- a/dmu0/dmu0_UHS/UHS-DR1_processing.ipynb
+++ b/dmu0/dmu0_UHS/UHS-DR1_processing.ipynb
@@ -71,7 +71,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "uhs = Table.read(\"data/UHS-DR1_HELP.fits\")"
@@ -80,7 +82,9 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "uhs[\"RA\"].unit = u.rad\n",
@@ -167,7 +171,9 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "log_file = open('log.txt', 'a')\n",
@@ -175,7 +181,7 @@
     "    field_moc = MOC(filename=\"../../dmu2/dmu2_field_coverages/{}_MOC.fits\".format(field[0]))\n",
     "    field_mask= inMoc(uhs[\"RA\"],uhs[\"DEC\"],field_moc)\n",
     "    if not np.all( np.logical_not(field_mask)):\n",
-    "        uhs[field_mask].write(\"data/UHS-DR1_{}.fits\".format(field[0]))\n",
+    "        uhs[field_mask].write(\"data/UHS-DR1_{}.fits\".format(field[0]), overwrite=True)\n",
     "    \n",
     "        subprocess.call([\"stilts\", \n",
     "                 \"pixfoot\", \n",
@@ -183,7 +189,7 @@
     "                 \"out=./data/UHS-DR1_{}_MOC.fits\".format(field[0]),\n",
     "                 \"ra=RA\",\n",
     "                 \"dec=DEC\",\n",
-    "                 \"order=12\"], \n",
+    "                 \"order=10\"], \n",
     "                    stdout=log_file)\n"
    ]
   }
