--- a/dmu1/dmu1_ml_Lockman-SWIRE/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_Lockman-SWIRE/2_Merging.ipynb
@@ -736,6 +736,8 @@
    "source": [
     "## VII - Choosing between multiple values for the same filter\n",
     "\n",
+    "### VII.1 - SERVS vs SWIRE\n",
+    "\n",
     "Both SERVS and SWIRE provide IRAC1 and IRAC2 fluxes. SERVS is deeper but tends to under-estimate flux of bright sources (Mattia said over 2000 µJy) as illustrated by this comparison of SWIRE, SERVS, and Spitzer-EIP fluxes."
    ]
   },
@@ -1261,15 +1263,9 @@
    },
    "outputs": [],
    "source": [
-    "master_catalogue['m_ukidss_k'].name = 'm_wfcam_k'\n",
-    "master_catalogue['merr_ukidss_k'].name = 'merr_wfcam_k'\n",
-    "master_catalogue['f_ukidss_k'].name = 'f_wfcam_k'\n",
-    "master_catalogue['ferr_ukidss_k'].name = 'ferr_wfcam_k'\n",
-    "master_catalogue['flag_ukidss_k'].name = 'flag_wfcam_k'\n",
-    "master_catalogue['m_ap_ukidss_k'].name = 'm_ap_wfcam_k'\n",
-    "master_catalogue['merr_ap_ukidss_k'].name = 'merr_ap_wfcam_k'\n",
-    "master_catalogue['f_ap_ukidss_k'].name = 'f_ap_wfcam_k'\n",
-    "master_catalogue['ferr_ap_ukidss_k'].name = 'ferr_ap_wfcam_k'\n"
+    "for col in master_catalogue.colnames:\n",
+    "    if '_wfcam_' in col:\n",
+    "        master_catalogue.rename_column(col, col.replace('_wfcam_', '_ukidss_'))\n"
    ]
   },
   {
@@ -1604,8 +1600,8 @@
     ")\n",
     "\n",
     "nb_nir_flux = (\n",
-    "    1 * ~np.isnan(master_catalogue['f_wfcam_j']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_wfcam_k'])\n",
+    "    1 * ~np.isnan(master_catalogue['f_ukidss_j']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_ukidss_k'])\n",
     ")\n",
     "\n",
     "nb_mir_flux = (\n",
