Rerun masterlist overview

--- a/dmu1/Masterlist_overview.ipynb
+++ b/dmu1/Masterlist_overview.ipynb
@@ -18,16 +18,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/seaborn/apionly.py:6: UserWarning: As seaborn no longer sets a default style on import, the seaborn.apionly module is deprecated. It will be removed in a future version.\n",
-      "  warnings.warn(msg, UserWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from astropy.table import Table, Column\n",
     "from astropy import units as u\n",
@@ -43,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +43,7 @@
        "'524.26 MB'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -98,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -116,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -152,7 +143,7 @@
     "    masterlist_summary['area_sq_degrees'][masterlist_summary['field'] == field[0]] = area\n",
     "    \n",
     "    masterlist_summary['dr1_suffix'][masterlist_summary['field'] == field[0]] = field[1]\n",
-    "    masterlist_summary['last_suffix'][masterlist_summary['field'] == field[0]] = find_last_suffix('dr1_ml_{}/data/'.format(field[0]))\n",
+    "    masterlist_summary['last_suffix'][masterlist_summary['field'] == field[0]] = find_last_ml_suffix('dmu1_ml_{}/data/'.format(field[0]))\n",
     "    \n",
     "    size = os.stat('dmu1_ml_{}/data/master_catalogue_{}_{}.fits'.format(field[0], \n",
     "                                                                                      field[0].lower(), \n",
@@ -178,38 +169,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "&lt;Table length=23&gt;\n",
-       "<table id=\"table140510157949976-989224\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>idx</th><th>Field</th><th>#Objects</th><th>#Area (sq. degrees)</th><th>#File size</th></tr></thead>\n",
-       "<tr><td>0</td><td>AKARI-NEP</td><td>285786</td><td>9.0</td><td>241231680.0</td></tr>\n",
-       "<tr><td>1</td><td>AKARI-SEP</td><td>844172</td><td>9.0</td><td>524255040.0</td></tr>\n",
-       "<tr><td>2</td><td>Bootes</td><td>3388482</td><td>11.0</td><td>4537221120.0</td></tr>\n",
-       "<tr><td>3</td><td>CDFS-SWIRE</td><td>2171051</td><td>13.0</td><td>5731646400.0</td></tr>\n",
-       "<tr><td>4</td><td>COSMOS</td><td>2779194</td><td>5.0</td><td>4630199040.0</td></tr>\n",
-       "<tr><td>5</td><td>EGS</td><td>1412613</td><td>4.0</td><td>3890416320.0</td></tr>\n",
-       "<tr><td>6</td><td>ELAIS-N1</td><td>4026292</td><td>14.0</td><td>5242279680.0</td></tr>\n",
-       "<tr><td>7</td><td>ELAIS-N2</td><td>1783240</td><td>9.0</td><td>1941984000.0</td></tr>\n",
-       "<tr><td>8</td><td>ELAIS-S1</td><td>1655564</td><td>9.0</td><td>1908901440.0</td></tr>\n",
-       "<tr><td>9</td><td>GAMA-09</td><td>12937982</td><td>62.0</td><td>19652852160.0</td></tr>\n",
-       "<tr><td>10</td><td>GAMA-12</td><td>12369415</td><td>63.0</td><td>14385677760.0</td></tr>\n",
-       "<tr><td>11</td><td>GAMA-15</td><td>14232880</td><td>62.0</td><td>16310928960.0</td></tr>\n",
-       "<tr><td>12</td><td>HDF-N</td><td>130679</td><td>1.0</td><td>188346240.0</td></tr>\n",
-       "<tr><td>13</td><td>Herschel-Stripe-82</td><td>49243287</td><td>363.0</td><td>111585386880.0</td></tr>\n",
-       "<tr><td>14</td><td>Lockman-SWIRE</td><td>4366298</td><td>22.0</td><td>5108604480.0</td></tr>\n",
-       "<tr><td>15</td><td>NGP</td><td>6759591</td><td>178.0</td><td>4704701760.0</td></tr>\n",
-       "<tr><td>16</td><td>SA13</td><td>9799</td><td>0.0</td><td>2554560.0</td></tr>\n",
-       "<tr><td>17</td><td>SGP</td><td>29790690</td><td>295.0</td><td>48529091520.0</td></tr>\n",
-       "<tr><td>18</td><td>SPIRE-NEP</td><td>2674</td><td>0.0</td><td>1157760.0</td></tr>\n",
-       "<tr><td>19</td><td>SSDF</td><td>12661903</td><td>111.0</td><td>7825080960.0</td></tr>\n",
-       "<tr><td>20</td><td>xFLS</td><td>977148</td><td>7.0</td><td>1050474240.0</td></tr>\n",
-       "<tr><td>21</td><td>XMM-13hr</td><td>38629</td><td>1.0</td><td>10019520.0</td></tr>\n",
-       "<tr><td>22</td><td>XMM-LSS</td><td>8752529</td><td>22.0</td><td>33819894720.0</td></tr>\n",
+       "<table id=\"table140177750612120-565753\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>idx</th><th>field</th><th>dr1_suffix</th><th>last_suffix</th><th>objects</th><th>area_sq_degrees</th><th>file_size_bytes</th><th>file_size_readable</th></tr></thead>\n",
+       "<tr><td>0</td><td>AKARI-NEP</td><td>2</td><td>2</td><td>285786</td><td>9.0</td><td>241231680</td><td>2</td></tr>\n",
+       "<tr><td>1</td><td>AKARI-SEP</td><td>2</td><td>2</td><td>844172</td><td>9.0</td><td>524255040</td><td>5</td></tr>\n",
+       "<tr><td>2</td><td>Bootes</td><td>2</td><td>2</td><td>3388482</td><td>11.0</td><td>4537221120</td><td>4</td></tr>\n",
+       "<tr><td>3</td><td>CDFS-SWIRE</td><td>2</td><td>2</td><td>2171051</td><td>13.0</td><td>5731646400</td><td>5</td></tr>\n",
+       "<tr><td>4</td><td>COSMOS</td><td>2</td><td>2</td><td>2779194</td><td>5.0</td><td>4630199040</td><td>4</td></tr>\n",
+       "<tr><td>5</td><td>EGS</td><td>2</td><td>2</td><td>1412613</td><td>4.0</td><td>3890416320</td><td>3</td></tr>\n",
+       "<tr><td>6</td><td>ELAIS-N1</td><td>2</td><td>2</td><td>4026292</td><td>14.0</td><td>5242279680</td><td>5</td></tr>\n",
+       "<tr><td>7</td><td>ELAIS-N2</td><td>2</td><td>2</td><td>1783240</td><td>9.0</td><td>1941984000</td><td>1</td></tr>\n",
+       "<tr><td>8</td><td>ELAIS-S1</td><td>2</td><td>2</td><td>1655564</td><td>9.0</td><td>1908901440</td><td>1</td></tr>\n",
+       "<tr><td>9</td><td>GAMA-09</td><td>2</td><td>2</td><td>12937982</td><td>62.0</td><td>19652852160</td><td>1</td></tr>\n",
+       "<tr><td>10</td><td>GAMA-12</td><td>2</td><td>2</td><td>12369415</td><td>63.0</td><td>14385677760</td><td>1</td></tr>\n",
+       "<tr><td>11</td><td>GAMA-15</td><td>2</td><td>2</td><td>14232880</td><td>62.0</td><td>16310928960</td><td>1</td></tr>\n",
+       "<tr><td>12</td><td>HDF-N</td><td>2</td><td>2</td><td>130679</td><td>1.0</td><td>188346240</td><td>1</td></tr>\n",
+       "<tr><td>13</td><td>Herschel-Stripe-82</td><td>2</td><td>2</td><td>49243287</td><td>363.0</td><td>111585386880</td><td>1</td></tr>\n",
+       "<tr><td>14</td><td>Lockman-SWIRE</td><td>2</td><td>2</td><td>4366298</td><td>22.0</td><td>5108604480</td><td>5</td></tr>\n",
+       "<tr><td>15</td><td>NGP</td><td>2</td><td>2</td><td>6759591</td><td>178.0</td><td>4704701760</td><td>4</td></tr>\n",
+       "<tr><td>16</td><td>SA13</td><td>2</td><td>2</td><td>9799</td><td>0.0</td><td>2554560</td><td>2</td></tr>\n",
+       "<tr><td>17</td><td>SGP</td><td>2</td><td>2</td><td>29790690</td><td>295.0</td><td>48529091520</td><td>4</td></tr>\n",
+       "<tr><td>18</td><td>SPIRE-NEP</td><td>2</td><td>2</td><td>2674</td><td>0.0</td><td>1157760</td><td>1</td></tr>\n",
+       "<tr><td>19</td><td>SSDF</td><td>2</td><td>2</td><td>12661903</td><td>111.0</td><td>7825080960</td><td>7</td></tr>\n",
+       "<tr><td>20</td><td>xFLS</td><td>2</td><td>2</td><td>977148</td><td>7.0</td><td>1050474240</td><td>1</td></tr>\n",
+       "<tr><td>21</td><td>XMM-13hr</td><td>2</td><td>2</td><td>38629</td><td>1.0</td><td>10019520</td><td>1</td></tr>\n",
+       "<tr><td>22</td><td>XMM-LSS</td><td>2</td><td>2</td><td>8752529</td><td>22.0</td><td>33819894720</td><td>3</td></tr>\n",
        "</table><style>table.dataTable {clear: both; width: auto !important; margin: 0 !important;}\n",
        ".dataTables_info, .dataTables_length, .dataTables_filter, .dataTables_paginate{\n",
        "display: inline-block; margin-right: 1em; }\n",
@@ -220,8 +211,8 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table140510157949976-989224').dataTable()\");\n",
-       "    $('#table140510157949976-989224').dataTable({\n",
+       "    console.log(\"$('#table140177750612120-565753').dataTable()\");\n",
+       "    $('#table140177750612120-565753').dataTable({\n",
        "        \"order\": [],\n",
        "        \"iDisplayLength\": 50,\n",
        "        \"aLengthMenu\": [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -234,7 +225,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -262,30 +253,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total size of masterlist files: 291.82 GB\n"
+     ]
+    }
+   ],
    "source": [
     "print('Total size of masterlist files: {}'.format(humanfriendly.format_size(np.sum(masterlist_summary['file_size_bytes']))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: VerifyWarning: It is strongly recommended that column names contain only upper and lower-case ASCII letters, digits, or underscores for maximum compatibility with other software (got '#Objects'). [astropy.io.fits.column]\n",
-      "WARNING: VerifyWarning: It is strongly recommended that column names contain only upper and lower-case ASCII letters, digits, or underscores for maximum compatibility with other software (got '#Area (sq. degrees)'). [astropy.io.fits.column]\n",
-      "WARNING: VerifyWarning: It is strongly recommended that column names contain only upper and lower-case ASCII letters, digits, or underscores for maximum compatibility with other software (got '#File size'). [astropy.io.fits.column]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "masterlist_summary.write('dr1_overview.fits', overwrite=True)"
    ]
