Work on overview

--- a/dmu1/Masterlist_overview.ipynb
+++ b/dmu1/Masterlist_overview.ipynb
@@ -18,7 +18,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/seaborn/apionly.py:6: UserWarning: As seaborn no longer sets a default style on import, the seaborn.apionly module is deprecated. It will be removed in a future version.\n",
+      "  warnings.warn(msg, UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "from astropy.table import Table, Column\n",
     "from astropy import units as u\n",
@@ -89,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -97,12 +106,12 @@
    "source": [
     "masterlist_summary = Table()\n",
     "masterlist_summary.add_column(Column(data = np.array(dr1)[:,0], name = 'field'))\n",
-    "masterlist_summary.add_column(Column(data =np.full(len(masterlist_summary), '', dtype=str), name = 'dr1_suffix'))\n",
-    "masterlist_summary.add_column(Column(data =np.full(len(masterlist_summary), '', dtype=str), name = 'last_suffix'))\n",
+    "masterlist_summary.add_column(Column(data =np.full(len(masterlist_summary), '', dtype=\"S20\"), name = 'dr1_suffix'))\n",
+    "masterlist_summary.add_column(Column(data =np.full(len(masterlist_summary), '', dtype=\"S20\"), name = 'last_suffix'))\n",
     "masterlist_summary.add_column(Column(data =np.full(len(masterlist_summary), 0, dtype=int), name = 'objects'))\n",
     "masterlist_summary.add_column(Column(data =np.full(len(masterlist_summary), np.nan, dtype=float), name = 'area_sq_degrees'))\n",
     "masterlist_summary.add_column(Column(data =np.full(len(masterlist_summary), 0, dtype=int), name = 'file_size_bytes'))\n",
-    "masterlist_summary.add_column(Column(data =np.full(len(masterlist_summary), '', dtype=str), name = 'file_size_readable'))"
+    "masterlist_summary.add_column(Column(data =np.full(len(masterlist_summary), '', dtype=\"S20\"), name = 'file_size_readable'))"
    ]
   },
   {
@@ -273,7 +282,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "masterlist_summary.write('dr1_overview.fits', overwrite=True)"
