--- a/dmu1/Masterlist_overview.ipynb
+++ b/dmu1/Masterlist_overview.ipynb
@@ -17,17 +17,10 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/seaborn/apionly.py:6: UserWarning: As seaborn no longer sets a default style on import, the seaborn.apionly module is deprecated. It will be removed in a future version.\n",
-      "  warnings.warn(msg, UserWarning)\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "from astropy.table import Table, Column\n",
     "from astropy import units as u\n",
@@ -39,26 +32,6 @@
     "\n",
     "import os\n",
     "import humanfriendly"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'524.26 MB'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "humanfriendly.format_size(524255040.0)"
    ]
   },
   {
@@ -98,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -185,31 +158,31 @@
      "data": {
       "text/html": [
        "&lt;Table length=23&gt;\n",
-       "<table id=\"table140177750612120-565753\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140462630476096-102772\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>field</th><th>dr1_suffix</th><th>last_suffix</th><th>objects</th><th>area_sq_degrees</th><th>file_size_bytes</th><th>file_size_readable</th></tr></thead>\n",
-       "<tr><td>0</td><td>AKARI-NEP</td><td>2</td><td>2</td><td>285786</td><td>9.0</td><td>241231680</td><td>2</td></tr>\n",
-       "<tr><td>1</td><td>AKARI-SEP</td><td>2</td><td>2</td><td>844172</td><td>9.0</td><td>524255040</td><td>5</td></tr>\n",
-       "<tr><td>2</td><td>Bootes</td><td>2</td><td>2</td><td>3388482</td><td>11.0</td><td>4537221120</td><td>4</td></tr>\n",
-       "<tr><td>3</td><td>CDFS-SWIRE</td><td>2</td><td>2</td><td>2171051</td><td>13.0</td><td>5731646400</td><td>5</td></tr>\n",
-       "<tr><td>4</td><td>COSMOS</td><td>2</td><td>2</td><td>2779194</td><td>5.0</td><td>4630199040</td><td>4</td></tr>\n",
-       "<tr><td>5</td><td>EGS</td><td>2</td><td>2</td><td>1412613</td><td>4.0</td><td>3890416320</td><td>3</td></tr>\n",
-       "<tr><td>6</td><td>ELAIS-N1</td><td>2</td><td>2</td><td>4026292</td><td>14.0</td><td>5242279680</td><td>5</td></tr>\n",
-       "<tr><td>7</td><td>ELAIS-N2</td><td>2</td><td>2</td><td>1783240</td><td>9.0</td><td>1941984000</td><td>1</td></tr>\n",
-       "<tr><td>8</td><td>ELAIS-S1</td><td>2</td><td>2</td><td>1655564</td><td>9.0</td><td>1908901440</td><td>1</td></tr>\n",
-       "<tr><td>9</td><td>GAMA-09</td><td>2</td><td>2</td><td>12937982</td><td>62.0</td><td>19652852160</td><td>1</td></tr>\n",
-       "<tr><td>10</td><td>GAMA-12</td><td>2</td><td>2</td><td>12369415</td><td>63.0</td><td>14385677760</td><td>1</td></tr>\n",
-       "<tr><td>11</td><td>GAMA-15</td><td>2</td><td>2</td><td>14232880</td><td>62.0</td><td>16310928960</td><td>1</td></tr>\n",
-       "<tr><td>12</td><td>HDF-N</td><td>2</td><td>2</td><td>130679</td><td>1.0</td><td>188346240</td><td>1</td></tr>\n",
-       "<tr><td>13</td><td>Herschel-Stripe-82</td><td>2</td><td>2</td><td>49243287</td><td>363.0</td><td>111585386880</td><td>1</td></tr>\n",
-       "<tr><td>14</td><td>Lockman-SWIRE</td><td>2</td><td>2</td><td>4366298</td><td>22.0</td><td>5108604480</td><td>5</td></tr>\n",
-       "<tr><td>15</td><td>NGP</td><td>2</td><td>2</td><td>6759591</td><td>178.0</td><td>4704701760</td><td>4</td></tr>\n",
-       "<tr><td>16</td><td>SA13</td><td>2</td><td>2</td><td>9799</td><td>0.0</td><td>2554560</td><td>2</td></tr>\n",
-       "<tr><td>17</td><td>SGP</td><td>2</td><td>2</td><td>29790690</td><td>295.0</td><td>48529091520</td><td>4</td></tr>\n",
-       "<tr><td>18</td><td>SPIRE-NEP</td><td>2</td><td>2</td><td>2674</td><td>0.0</td><td>1157760</td><td>1</td></tr>\n",
-       "<tr><td>19</td><td>SSDF</td><td>2</td><td>2</td><td>12661903</td><td>111.0</td><td>7825080960</td><td>7</td></tr>\n",
-       "<tr><td>20</td><td>xFLS</td><td>2</td><td>2</td><td>977148</td><td>7.0</td><td>1050474240</td><td>1</td></tr>\n",
-       "<tr><td>21</td><td>XMM-13hr</td><td>2</td><td>2</td><td>38629</td><td>1.0</td><td>10019520</td><td>1</td></tr>\n",
-       "<tr><td>22</td><td>XMM-LSS</td><td>2</td><td>2</td><td>8752529</td><td>22.0</td><td>33819894720</td><td>3</td></tr>\n",
+       "<tr><td>0</td><td>AKARI-NEP</td><td>20171202</td><td>20171211</td><td>285786</td><td>9.0</td><td>241231680</td><td>241.23 MB</td></tr>\n",
+       "<tr><td>1</td><td>AKARI-SEP</td><td>20180122</td><td>20180201</td><td>844172</td><td>9.0</td><td>524255040</td><td>524.26 MB</td></tr>\n",
+       "<tr><td>2</td><td>Bootes</td><td>20180111</td><td>20180111</td><td>3388482</td><td>11.0</td><td>4537221120</td><td>4.54 GB</td></tr>\n",
+       "<tr><td>3</td><td>CDFS-SWIRE</td><td>20180129</td><td>20180130</td><td>2171051</td><td>13.0</td><td>5731646400</td><td>5.73 GB</td></tr>\n",
+       "<tr><td>4</td><td>COSMOS</td><td>20180112</td><td>20180201</td><td>2779194</td><td>5.0</td><td>4630199040</td><td>4.63 GB</td></tr>\n",
+       "<tr><td>5</td><td>EGS</td><td>20171202</td><td>20171202</td><td>1412613</td><td>4.0</td><td>3890416320</td><td>3.89 GB</td></tr>\n",
+       "<tr><td>6</td><td>ELAIS-N1</td><td>20171016</td><td>20171016</td><td>4026292</td><td>14.0</td><td>5242279680</td><td>5.24 GB</td></tr>\n",
+       "<tr><td>7</td><td>ELAIS-N2</td><td>20171207</td><td>20180201</td><td>1783240</td><td>9.0</td><td>1941984000</td><td>1.94 GB</td></tr>\n",
+       "<tr><td>8</td><td>ELAIS-S1</td><td>20180122</td><td>20180201</td><td>1655564</td><td>9.0</td><td>1908901440</td><td>1.91 GB</td></tr>\n",
+       "<tr><td>9</td><td>GAMA-09</td><td>20171206</td><td>20171206</td><td>12937982</td><td>62.0</td><td>19652852160</td><td>19.65 GB</td></tr>\n",
+       "<tr><td>10</td><td>GAMA-12</td><td>20180129</td><td>20180129</td><td>12369415</td><td>63.0</td><td>14385677760</td><td>14.39 GB</td></tr>\n",
+       "<tr><td>11</td><td>GAMA-15</td><td>20180129</td><td>20180129</td><td>14232880</td><td>62.0</td><td>16310928960</td><td>16.31 GB</td></tr>\n",
+       "<tr><td>12</td><td>HDF-N</td><td>20171212</td><td>20180201</td><td>130679</td><td>1.0</td><td>188346240</td><td>188.35 MB</td></tr>\n",
+       "<tr><td>13</td><td>Herschel-Stripe-82</td><td>20180113</td><td>20180113</td><td>49243287</td><td>363.0</td><td>111585386880</td><td>111.59 GB</td></tr>\n",
+       "<tr><td>14</td><td>Lockman-SWIRE</td><td>20171201</td><td>20171201</td><td>4366298</td><td>22.0</td><td>5108604480</td><td>5.11 GB</td></tr>\n",
+       "<tr><td>15</td><td>NGP</td><td>20171207</td><td>20171207</td><td>6759591</td><td>178.0</td><td>4704701760</td><td>4.7 GB</td></tr>\n",
+       "<tr><td>16</td><td>SA13</td><td>20171123</td><td>20180201</td><td>9799</td><td>0.0</td><td>2554560</td><td>2.55 MB</td></tr>\n",
+       "<tr><td>17</td><td>SGP</td><td>20180124</td><td>20180124</td><td>29790690</td><td>295.0</td><td>48529091520</td><td>48.53 GB</td></tr>\n",
+       "<tr><td>18</td><td>SPIRE-NEP</td><td>20171122</td><td>20171122</td><td>2674</td><td>0.0</td><td>1157760</td><td>1.16 MB</td></tr>\n",
+       "<tr><td>19</td><td>SSDF</td><td>20180122</td><td>20180122</td><td>12661903</td><td>111.0</td><td>7825080960</td><td>7.83 GB</td></tr>\n",
+       "<tr><td>20</td><td>xFLS</td><td>20171201</td><td>20171201</td><td>977148</td><td>7.0</td><td>1050474240</td><td>1.05 GB</td></tr>\n",
+       "<tr><td>21</td><td>XMM-13hr</td><td>20171123</td><td>20180201</td><td>38629</td><td>1.0</td><td>10019520</td><td>10.02 MB</td></tr>\n",
+       "<tr><td>22</td><td>XMM-LSS</td><td>20180130</td><td>20180130</td><td>8752529</td><td>22.0</td><td>33819894720</td><td>33.82 GB</td></tr>\n",
        "</table><style>table.dataTable {clear: both; width: auto !important; margin: 0 !important;}\n",
        ".dataTables_info, .dataTables_length, .dataTables_filter, .dataTables_paginate{\n",
        "display: inline-block; margin-right: 1em; }\n",
@@ -220,8 +193,8 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table140177750612120-565753').dataTable()\");\n",
-       "    $('#table140177750612120-565753').dataTable({\n",
+       "    console.log(\"$('#table140462630476096-102772').dataTable()\");\n",
+       "    $('#table140462630476096-102772').dataTable({\n",
        "        \"order\": [],\n",
        "        \"iDisplayLength\": 50,\n",
        "        \"aLengthMenu\": [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -263,9 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
