Fixing column name on AKARI-NEP

--- a/dmu1/dmu1_ml_AKARI-NEP/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_AKARI-NEP/2_Merging.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# AKARI-NEP master catalogue\n",
     "\n",
-    "This notebook presents the merge of the various pristine catalogues to produce HELP mater catalogue on ELAIS-N1."
+    "This notebook presents the merge of the various pristine catalogues to produce HELP mater catalogue on AKARI-NEP."
    ]
   },
   {
@@ -437,7 +437,7 @@
    "source": [
     "master_catalogue.add_column(Column(gen_help_id(master_catalogue['ra'], master_catalogue['dec']),\n",
     "                                   name=\"help_id\"))\n",
-    "master_catalogue.add_column(Column(np.full(len(master_catalogue), \"ELAIS-N1\", dtype='<U18'),\n",
+    "master_catalogue.add_column(Column(np.full(len(master_catalogue), \"AKARI-NEP\", dtype='<U18'),\n",
     "                                   name=\"field\"))"
    ]
   },
