--- a/dmu1/dmu1_ml_CDFS-SWIRE/1.8_VISTA-VHS.ipynb
+++ b/dmu1/dmu1_ml_CDFS-SWIRE/1.8_VISTA-VHS.ipynb
@@ -42,7 +42,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -67,7 +69,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "OUT_DIR =  os.environ.get('TMP_DIR', \"./data_tmp\")\n",
@@ -90,7 +94,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Bands: Y,J,H,K\n",
@@ -172,6 +178,10 @@
     "        # Some object have a magnitude to 0, we suppose this means missing value\n",
     "        catalogue[col][catalogue[col] <= 0] = np.nan\n",
     "        catalogue[errcol][catalogue[errcol] <= 0] = np.nan  \n",
+    "        \n",
+    "        mask = catalogue[col] > 50.\n",
+    "        catalogue[col][mask] = np.nan\n",
+    "        catalogue[errcol][mask] = np.nan\n",
     " \n",
     "        # Convert magnitude from Vega to AB\n",
     "        catalogue[col] += vega_to_ab[col[-1]]\n",
@@ -309,7 +319,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "gaia = Table.read(\"../../dmu0/dmu0_GAIA/data/GAIA_CDFS-SWIRE.fits\")\n",
@@ -374,7 +386,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "catalogue[RA_COL] +=  delta_ra.to(u.deg)\n",
@@ -422,7 +436,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "catalogue.add_column(\n",
@@ -467,7 +483,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "catalogue.write(\"{}/VISTA-VHS.fits\".format(OUT_DIR), overwrite=True)"
@@ -491,7 +509,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
