--- a/dmu1/dmu1_ml_CDFS-SWIRE/1.1_VISTA-VIDEO.ipynb
+++ b/dmu1/dmu1_ml_CDFS-SWIRE/1.1_VISTA-VIDEO.ipynb
@@ -214,6 +214,11 @@
     "for col in catalogue.colnames:\n",
     "    if col.startswith('m_'):\n",
     "        \n",
+    "        # Some 99.0 mags\n",
+    "        mask = catalogue[col] > 90.\n",
+    "        catalogue[col][mask] = np.nan\n",
+    "        catalogue[errcol][mask] = np.nan\n",
+    "        \n",
     "        errcol = \"merr{}\".format(col[1:])\n",
     "        flux, error = mag_to_flux(np.array(catalogue[col]), np.array(catalogue[errcol]))\n",
     "\n",
