--- a/dmu1/dmu1_ml_NGP/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_NGP/2_Merging.ipynb
@@ -522,13 +522,13 @@
    },
    "outputs": [],
    "source": [
-    "master_catalogue.add_column(Column(data=nnp.full(len(master_catalogue), False, dtype=bool)\n",
+    "master_catalogue.add_column(Column(data=np.full(len(master_catalogue), False, dtype=bool),\n",
     "                                   name=\"zspec_association_flag\"))\n",
-    "master_catalogue.add_column(Column(data=nnp.full(len(master_catalogue), '', dtype='<U33')\n",
+    "master_catalogue.add_column(Column(data=np.full(len(master_catalogue), '', dtype='<U33'),\n",
     "                                   name=\"specz_id\"))\n",
-    "master_catalogue.add_column(Column(data=nnp.full(len(master_catalogue), -99, dtype=int)\n",
+    "master_catalogue.add_column(Column(data=np.full(len(master_catalogue), -99, dtype=int),\n",
     "                                   name=\"zspec_qual\"))\n",
-    "master_catalogue.add_column(Column(data=nnp.full(len(master_catalogue), np.nan)\n",
+    "master_catalogue.add_column(Column(data=np.full(len(master_catalogue), np.nan),\n",
     "                                   name=\"zspec\"))"
    ]
   },
