--- a/dmu1/dmu1_ml_XMM-LSS/2.1_Megacam_merge.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/2.1_Megacam_merge.ipynb
@@ -100,7 +100,7 @@
    "source": [
     "#candels = Table.read(\"{}/CANDELS.fits\".format(TMP_DIR))           # 1.1\n",
     "candels = Table.read(\"{}/CANDELS-UDS.fits\".format(TMP_DIR))           # 1.2\n",
-    "#cfht_wirds = Table.read(\"{}/CFHT-WIRDS.fits\".format(TMP_DIR))     # 1.3\n",
+    "cfht_wirds = Table.read(\"{}/CFHT-WIRDS.fits\".format(TMP_DIR))     # 1.3\n",
     "cfhtls_wide = Table.read(\"{}/CFHTLS-WIDE.fits\".format(TMP_DIR))   # 1.4a\n",
     "cfhtls_deep = Table.read(\"{}/CFHTLS-DEEP.fits\".format(TMP_DIR))   # 1.4b\n",
     "#We no longer use CFHTLenS as it is the same raw data set as CFHTLS-WIDE\n",
@@ -116,7 +116,7 @@
     "sparcs = Table.read(\"{}/SpARCS.fits\".format(TMP_DIR))             # 1.12\n",
     "#dxs = Table.read(\"{}/UKIDSS-DXS.fits\".format(TMP_DIR))            # 1.13\n",
     "#uds = Table.read(\"{}/UKIDSS-UDS.fits\".format(TMP_DIR))            # 1.14\n",
-    "#vipers = Table.read(\"{}/VIPERS.fits\".format(TMP_DIR))             # 1.15\n",
+    "vipers = Table.read(\"{}/VIPERS.fits\".format(TMP_DIR))             # 1.15\n",
     "#vhs = Table.read(\"{}/VISTA-VHS.fits\".format(TMP_DIR))             # 1.16\n",
     "#video = Table.read(\"{}/VISTA-VIDEO.fits\".format(TMP_DIR))         # 1.17\n",
     "#viking = Table.read(\"{}/VISTA-VIKING.fits\".format(TMP_DIR))       # 1.18"
@@ -199,6 +199,80 @@
     "        if band in col:\n",
     "            master_catalogue.remove_column(col)\n",
     "            print(col, ' removed.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  Add CFHT-WIRDS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "nb_merge_dist_plot(\n",
+    "    SkyCoord(master_catalogue['ra'], master_catalogue['dec']),\n",
+    "    SkyCoord(cfht_wirds['wirds_ra'], cfht_wirds['wirds_dec'])\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Given the graph above, we use 0.8 arc-second radius\n",
+    "master_catalogue = merge_catalogues(master_catalogue, \n",
+    "                                    cfht_wirds, \n",
+    "                                    \"wirds_ra\", \n",
+    "                                    \"wirds_dec\", \n",
+    "                                    radius=0.8*u.arcsec)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add VIPERS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "nb_merge_dist_plot(\n",
+    "    SkyCoord(master_catalogue['ra'], master_catalogue['dec']),\n",
+    "    SkyCoord(vipers['vipers_ra'], vipers['vipers_dec'])\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Given the graph above, we use 0.8 arc-second radius\n",
+    "master_catalogue = merge_catalogues(master_catalogue, \n",
+    "                                    vipers, \n",
+    "                                    \"vipers_ra\", \n",
+    "                                    \"vipers_dec\", \n",
+    "                                    radius=0.8*u.arcsec)"
    ]
   },
   {
@@ -498,18 +572,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### VII.b CFHTLS-DEEP, CFHTLS-WIDE and SpARCS: CFHT Megacam fluxes\n",
+    "### VII.a CFHT Megacam fluxes: CFHTLS-DEEP, CFHTLS-WIDE SpARCS, CANDELS, CFHT-WIRDS and VIPERS\n",
     "\n",
     "According to Mattia CFHTLenS is built on the same data as CFHTLS-WIDE and should not be included. I have therefore excluded it from the merge above.\n",
     "\n",
     "CFHTLS-DEEP is prefferred to CFHTLS-WIDE which is prefferred to SpARCS\n",
     "\n",
-    "|             |                  |\n",
+    "| Survey (in HELP use order)            | Bands                 |\n",
     "|-------------|------------------|\n",
     "| CFHTLS-WIDE | u, g, r, i, z    |\n",
     "| CFHTLS-DEEP | u, g, r, i, z, y |\n",
     "| SpARCS      | u, g, r, z, y    |\n",
-    "| CANDELS     | u                |\n"
+    "| CANDELS     | u                |\n",
+    "| CFHT-WIRDS     | u, g, r, i, z  (+ WIRCAM J, H, Ks)            |\n",
+    "| VIPERS     | u, g, r, i, z, y  (+ WIRCAM Ks)            |\n"
    ]
   },
   {
@@ -534,7 +610,7 @@
    "source": [
     "megacam_stats = Table()\n",
     "megacam_stats.add_column(Column(data=['u','g','r','i','z','y'], name=\"Band\"))\n",
-    "for col in [\"CFHTLS-DEEP\", \"CFHTLS-WIDE\", \"SpARCS\", \"CANDELS\"]:\n",
+    "for col in [\"CFHTLS-DEEP\", \"CFHTLS-WIDE\", \"SpARCS\", \"CANDELS\", \"CFHT-WIRDS\", \"VIPERS\"]:\n",
     "    megacam_stats.add_column(Column(data=np.full(6, 0), name=\"{}\".format(col)))\n",
     "    megacam_stats.add_column(Column(data=np.full(6, 0), name=\"use {}\".format(col)))\n",
     "    megacam_stats.add_column(Column(data=np.full(6, 0), name=\"{} ap\".format(col)))\n",
@@ -545,7 +621,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -558,6 +636,7 @@
     "        has_cfhtls_wide = np.full(len(master_catalogue), False, dtype=bool)\n",
     "    else:\n",
     "        has_cfhtls_wide = ~np.isnan(master_catalogue['f_cfhtls-wide_' + band])\n",
+    "        \n",
     "    if band == 'i':\n",
     "        has_sparcs = np.full(len(master_catalogue), False, dtype=bool)\n",
     "    else:\n",
@@ -567,12 +646,21 @@
     "        has_candels = ~np.isnan(master_catalogue['f_candels-megacam_' + band])\n",
     "    else:\n",
     "        has_candels = np.full(len(master_catalogue), False, dtype=bool)\n",
+    "        \n",
+    "    if band == 'y':\n",
+    "        has_wirds = np.full(len(master_catalogue), False, dtype=bool)\n",
+    "    else:\n",
+    "        has_wirds = ~np.isnan(master_catalogue['f_wirds_' + band])\n",
+    "        \n",
+    "    has_vipers =  = ~np.isnan(master_catalogue['f_vipers_' + band])\n",
     "    \n",
     "\n",
     "    use_cfhtls_deep = has_cfhtls_deep \n",
     "    use_cfhtls_wide = has_cfhtls_wide & ~has_cfhtls_deep\n",
     "    use_sparcs = has_sparcs & ~has_cfhtls_wide & ~has_cfhtls_deep\n",
     "    use_candels = has_candels & ~has_sparcs & ~has_cfhtls_wide & ~has_cfhtls_deep\n",
+    "    use_wirds = has_wirds & ~has_candels & ~has_sparcs & ~has_cfhtls_wide & ~has_cfhtls_deep\n",
+    "    use_vipers = has_vipers & ~has_wirds & ~has_candels & ~has_sparcs & ~has_cfhtls_wide & ~has_cfhtls_deep\n",
     "\n",
     "    f_megacam = np.full(len(master_catalogue), np.nan)\n",
     "    f_megacam[use_cfhtls_deep] = master_catalogue['f_cfhtls-deep_' + band][use_cfhtls_deep]\n",
@@ -581,7 +669,10 @@
     "    if not (band == 'i'):\n",
     "        f_megacam[use_sparcs] = master_catalogue['f_sparcs_' + band][use_sparcs]\n",
     "    if band == 'u':\n",
-    "        f_megacam[use_candels] = master_catalogue['f_candels-megacam_' + band][use_candels]\n",
+    "        f_megacam[use_candels] = master_catalogue['f_candels-megacam_' + band][use_candels] \n",
+    "    if not (band == 'y'):\n",
+    "        f_megacam[use_wirds] = master_catalogue['f_wirds_' + band][use_wirds]\n",
+    "    f_megacam[use_vipers] = master_catalogue['f_vipers_' + band][use_vipers]    \n",
     "\n",
     "    ferr_megacam = np.full(len(master_catalogue), np.nan)\n",
     "    ferr_megacam[use_cfhtls_deep] = master_catalogue['ferr_cfhtls-deep_' + band][use_cfhtls_deep]\n",
@@ -591,6 +682,9 @@
     "        ferr_megacam[use_sparcs] = master_catalogue['ferr_sparcs_' + band][use_sparcs]\n",
     "    if band == 'u':\n",
     "        ferr_megacam[use_candels] = master_catalogue['ferr_candels-megacam_' + band][use_candels]\n",
+    "    if not (band == 'y'):\n",
+    "        ferr_megacam[use_wirds] = master_catalogue['ferr_wirds_' + band][use_wirds]\n",
+    "    ferr_megacam[use_vipers] = master_catalogue['ferr_vipers_' + band][use_vipers] \n",
     "    \n",
     "    m_megacam = np.full(len(master_catalogue), np.nan)\n",
     "    m_megacam[use_cfhtls_deep] = master_catalogue['m_cfhtls-deep_' + band][use_cfhtls_deep]\n",
@@ -600,6 +694,9 @@
     "        m_megacam[use_sparcs] = master_catalogue['m_sparcs_' + band][use_sparcs]\n",
     "    if band == 'u':\n",
     "        m_megacam[use_candels] = master_catalogue['m_candels-megacam_' + band][use_candels]\n",
+    "    if not (band == 'y'):\n",
+    "        m_megacam[use_wirds] = master_catalogue['m_wirds_' + band][use_wirds]\n",
+    "    m_megacam[use_vipers] = master_catalogue['m_vipers_' + band][use_vipers] \n",
     "\n",
     "    merr_megacam = np.full(len(master_catalogue), np.nan)\n",
     "    merr_megacam[use_cfhtls_deep] = master_catalogue['merr_cfhtls-deep_' + band][use_cfhtls_deep]\n",
@@ -609,6 +706,9 @@
     "        merr_megacam[use_sparcs] = master_catalogue['merr_sparcs_' + band][use_sparcs]\n",
     "    if band == 'u':\n",
     "        merr_megacam[use_candels] = master_catalogue['merr_candels-megacam_' + band][use_candels]\n",
+    "    if not (band == 'y'):\n",
+    "        merr_megacam[use_wirds] = master_catalogue['merr_wirds_' + band][use_wirds]\n",
+    "    merr_megacam[use_vipers] = master_catalogue['merr_vipers_' + band][use_vipers] \n",
     "\n",
     "    flag_megacam = np.full(len(master_catalogue), False, dtype=bool)\n",
     "    flag_megacam[use_cfhtls_deep] = master_catalogue['flag_cfhtls-deep_' + band][use_cfhtls_deep]\n",
@@ -618,6 +718,9 @@
     "        flag_megacam[use_sparcs] = master_catalogue['flag_sparcs_' + band][use_sparcs]\n",
     "    if band == 'u':\n",
     "        flag_megacam[use_candels] = master_catalogue['flag_candels-megacam_' + band][use_candels]\n",
+    "    if not (band == 'y'):\n",
+    "        flag_megacam[use_wirds] = master_catalogue['flag_wirds_' + band][use_wirds]\n",
+    "    flag_megacam[use_vipers] = master_catalogue['flag_vipers_' + band][use_vipers] \n",
     "\n",
     "    master_catalogue.add_column(Column(data=f_megacam, name=\"f_megacam_\" + band))\n",
     "    master_catalogue.add_column(Column(data=ferr_megacam, name=\"ferr_megacam_\" + band))\n",
@@ -654,6 +757,12 @@
     "        old_columns = old_cfhtls_deep_columns + old_cfhtls_wide_columns + old_sparcs_columns\n",
     "    if band == 'u':\n",
     "        old_columns = old_columns + old_candels_columns\n",
+    "    \n",
+    "    old_columns = []\n",
+    "    column_types = ['f', 'ferr', 'm', 'merr', 'flag'] \n",
+    "    for col_t in \n",
+    "    \n",
+    "        \n",
     "    master_catalogue.remove_columns(old_columns)\n",
     "\n",
     "    origin = np.full(len(master_catalogue), '     ', dtype='<U5')\n",
@@ -842,6 +951,51 @@
    "source": [
     "megacam_origin.write(\"{}/xmm-lss_megacam_fluxes_origins{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### VII.b CFHT WIRCAM fluxes: CFHT-WIRDS and VIPERS\n",
+    "\n",
+    "We take WIRDS over VIPERS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
