Fix unit error on AKARI-SEP
Jy to uJy #18

--- a/dmu1/dmu1_ml_AKARI-SEP/1.1_SIMES.ipynb
+++ b/dmu1/dmu1_ml_AKARI-SEP/1.1_SIMES.ipynb
@@ -44,7 +44,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -94,7 +96,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "imported_columns = OrderedDict({\n",
@@ -148,6 +152,10 @@
     "for col in catalogue.colnames:\n",
     "    if col.startswith('f_'):\n",
     "        errcol = \"ferr{}\".format(col[1:])\n",
+    "        \n",
+    "        #Convert Jy to uJy\n",
+    "        catalogue[col] *= 1.e6\n",
+    "        catalogue[errcol] *= 1.e6\n",
     "        \n",
     "        magnitude, error = flux_to_mag(\n",
     "            np.array(catalogue[col])/1.e6, np.array(catalogue[errcol])/1.e6)\n",
