--- a/dmu1/dmu1_ml_XMM-LSS/2.1_Megacam_merge.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/2.1_Megacam_merge.ipynb
@@ -760,7 +760,8 @@
     "    \n",
     "    old_columns = []\n",
     "    column_types = ['f', 'ferr', 'm', 'merr', 'flag'] \n",
-    "    for col_t in \n",
+    "    for col_t in column_types:\n",
+    "        old_columns += ['{}_cfhtls-deep_{}'.format(col_t)]\n",
     "    \n",
     "        \n",
     "    master_catalogue.remove_columns(old_columns)\n",
