unit fixing on AKARI-SEP

--- a/dmu32/dmu32_GAMA-09/GAMA-09_catalogue_merging.ipynb
+++ b/dmu32/dmu32_GAMA-09/GAMA-09_catalogue_merging.ipynb
@@ -64,7 +64,7 @@
     "# Master list\n",
     "\n",
     "ml = Table.read(\n",
-    "    \"../../dmu1/dmu1_ml_CDFS-SWIRE/data/master_catalogue_gama-09_20171206.fits\")\n",
+    "    \"../../dmu1/dmu1_ml_GAMA-09/data/master_catalogue_gama-09_{}.fits\".format(SUFFIX))\n",
     "ml.meta = None"
    ]
   },
@@ -372,7 +372,7 @@
     "if not FIRST_RUN_FOR_CIGALE:\n",
     "\n",
     "    # Cigale outputs\n",
-    "    cigale = Table.read(\"../../dmu28/dmu28_CDFS-SWIRE/data/HELP_final_results.fits\")\n",
+    "    cigale = Table.read(\"../../dmu28/dmu28_GAMA-09/data/HELP_final_results.fits\")\n",
     "    cigale['id'].name = \"help_id\"\n",
     "\n",
     "    # We convert the various Chi2 and threshold to flags\n",
@@ -514,7 +514,7 @@
    "source": [
     "if not FIRST_RUN_FOR_CIGALE:\n",
     "\n",
-    "    merged_table[columns].write(\"data/CDFS-SWIRE.fits\")"
+    "    merged_table[columns].write(\"data/GAMA-09.fits\")"
    ]
   }
  ],
