--- a/dmu1/dmu1_ml_AKARI-SEP/1.1_SIMES.ipynb
+++ b/dmu1/dmu1_ml_AKARI-SEP/1.1_SIMES.ipynb
@@ -153,9 +153,9 @@
     "    if col.startswith('f_'):\n",
     "        errcol = \"ferr{}\".format(col[1:])\n",
     "        \n",
-    "        #Convert Jy to uJy\n",
-    "        catalogue[col] *= 1.e6\n",
-    "        catalogue[errcol] *= 1.e6\n",
+    "        #Convert mJy to uJy\n",
+    "        catalogue[col] *= 1.e3\n",
+    "        catalogue[errcol] *= 1.e3\n",
     "        \n",
     "        magnitude, error = flux_to_mag(\n",
     "            np.array(catalogue[col])/1.e6, np.array(catalogue[errcol])/1.e6)\n",
