--- a/dmu32/dmu32_AKARI-SEP/AKARI-SEP_catalogue_merging.ipynb
+++ b/dmu32/dmu32_AKARI-SEP/AKARI-SEP_catalogue_merging.ipynb
@@ -357,7 +357,7 @@
     "    # assert set(columns) == set(merged_table.colnames)\n",
     "    \n",
     "    \n",
-    "    merged_table.write(\"data/AKARI-SEP_{}_cigale.fits\".format(SUFFIX))"
+    "    merged_table.write(\"data/AKARI-SEP_{}_cigale.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
   {
